update header navigation and fix registration workflow